--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,7 +8,7 @@
     <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
     <!--<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>-->
-     {% tailwind_css %}
+    {% tailwind_css %}
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
     <!--<link rel="stylesheet" href="{% static 'css/blog.css' %}">-->
 </head>
@@ -23,7 +23,7 @@
                     <span class="font-semibold text-xl tracking-tight"><a href="/">NoteRozin</a></span>
                 </div>
                 <div class="block lg:hidden">
-                    <button id="nav-2"
+                    <button id="mobile-menu-button"
                         class="flex items-center px-3 py-2 border-2 rounded text-blue-700 border-blue-700 hover:text-blue-700 hover:border-blue-700"><svg
                             viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="fill-current h-3 w-3">
                             <title>Menu
@@ -33,59 +33,91 @@
                         </svg></button>
                 </div>
             </div>
-            <div class="menu w-full lg:block flex-grow lg:flex lg:items-center lg:w-auto lg:px-3 px-8">
-                <div class="text-md font-bold text-blue-700 lg:flex-grow">
-                    <a href="#responsive-header"
-                        class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">About</a>
-                    <a href="#responsive-header"
-                        class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Contact</a>
-                    {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}"
-                        class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">{% include './icons/file-earmark-plus.svg' %}
-                    </a>
-                    {% endif %}
+            <div class="flex items-center justify-between flex-wrap p-4">
+                <!-- Logo/Brand -->
+                <div class="flex items-center flex-shrink-0 text-white mr-6">
+                    <!-- Your logo here -->
                 </div>
-                <!-- This is an example component -->
-                <div class="relative mx-auto text-gray-600 lg:block hidden">
-                    <input type="search" name="search" placeholder="Search"
-                        class="border-2 border-gray-300 bg-white h-10 pl-2 pr-8 rounded-lg text-sm focus:outline-none" />
-                    <button type="submit" class="absolute right-0 top-0 mt-3 mr-2"><svg
-                            xmlns="http://www.w3.org/2000/svg" version="1.1" id="Capa_1-2" x="0px" y="0px"
-                            viewBox="0 0 56.966 56.966" xml:space="preserve" width="512px" height="512px"
-                            class="text-gray-600 h-4 w-4 fill-current">
-                            <path>
-                                d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23
-                                s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92
-                                c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z
-                                M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z">
-                            </path>
-                        </svg></button>
-                </div>
-                <div class="flex">
-                    {% if user.is_authenticated %}
-                    <a href="/admin/"
-                        class="block text-md px-4 py-2 rounded text-blue-700 ml-2 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">
-                        {{user.username}}
-                    </a>
-                    {% else %}
-                    <a href="#"
-                        class="block text-md px-4 py-2 rounded text-blue-700 ml-2 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">Sign
-                        in</a>
-                    <a href="admin/login/?next=/admin/"
-                        class="block text-md px-4 ml-2 py-2 rounded text-blue-700 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">login</a>
-                    {% endif %}
 
+                <!-- Mobile menu button 
+                <div class="block lg:hidden">
+                    <button id="mobile-menu-button"
+                        class="flex items-center px-3 py-2 border rounded text-blue-700 border-blue-700 hover:text-white hover:bg-blue-700">
+                        <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                            <title>Menu</title>
+                            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+                        </svg>
+                    </button>
+                </div>-->
+
+                <!-- Navigation Menu -->
+                <div id="mobile-menu"
+                    class="w-full hidden lg:block flex-grow lg:flex lg:items-center lg:w-auto lg:px-3 px-8">
+                    <div class="text-md font-bold text-blue-700 lg:flex-grow">
+                        <a href="#responsive-header"
+                            class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">About</a>
+                        <a href="#responsive-header"
+                            class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">Contact</a>
+                        {% if user.is_authenticated %}
+                        <a href="{% url 'post_new' %}"
+                            class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
+                            {% include './icons/file-earmark-plus.svg' %}
+                        </a>
+                        {% endif %}
+                    </div>
+
+                    <!-- Search -->
+                    <div class="relative mx-auto text-gray-600 lg:block hidden">
+                        <input type="search" name="search" placeholder="Search"
+                            class="border-2 border-gray-300 bg-white h-10 pl-2 pr-8 rounded-lg text-sm focus:outline-none" />
+                        <button type="submit" class="absolute right-0 top-0 mt-3 mr-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="Capa_1-2" x="0px" y="0px"
+                                viewBox="0 0 56.966 56.966" xml:space="preserve" width="512px" height="512px"
+                                class="text-gray-600 h-4 w-4 fill-current">
+                                <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23
+                    s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92
+                    c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17
+                    s-17-7.626-17-17S14.61,6,23.984,6z" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <!-- User/Auth Links -->
+                    <div class="flex">
+                        {% if user.is_authenticated %}
+                        <a href="/admin/"
+                            class="block text-md px-4 py-2 rounded text-blue-700 ml-2 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">
+                            {{user.username}}
+                        </a>
+                        {% else %}
+                        <a href="#"
+                            class="block text-md px-4 py-2 rounded text-blue-700 ml-2 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">Sign
+                            in</a>
+                        <a href="admin/login/?next=/admin/"
+                            class="block text-md px-4 ml-2 py-2 rounded text-blue-700 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">login</a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
     <main class="container">
-        <div class="mx-auto container py-10 px-6 items-center">
+        <div class="flex items-center justify-center min-h-screen py-5">
+            <h3 class="text-2xl font-bold">Notes</h3>
+        </div>
+        <div class="mx-auto container py-2 px-6 items-center justify-center">
             {% block content %}
 
             {% endblock %}
         </div>
     </main>
+    <script>
+        // Toggle mobile menu
+        document.getElementById('mobile-menu-button').addEventListener('click', function () {
+            const menu = document.getElementById('mobile-menu');
+            menu.classList.toggle('hidden');
+        });
+    </script>
 </body>
 <footer class="text-gray-600 body-font">
     <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
