--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,31 +1,34 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+{% with colors="bg-red-200 bg-blue-200 bg-green-200 bg-yellow-200 bg-purple-200 bg-pink-200 bg-indigo-200" %}
+{% with color_list=colors.split %}
 {% with a=posts.count %}
 <div class="grid sm:grid-cols-1 md:grid-cols-1 
             {% if a > 3 %}lg:grid-cols-2 xl:grid-cols-4{% else %}lg:grid-cols-1 xl:grid-cols-1{% endif %} 
             gap-6">
         {% for post in posts %}
+            {% with random_color=color_list|random %}
         <!--- more free and premium Tailwind CSS components at https://tailwinduikit.com/ --->
         <div class="rounded">
             <div
-                class="w-full h-64 flex flex-col justify-between dark:bg-gray-800 bg-white dark:border-gray-700 rounded-lg border border-gray-400 mb-6 py-5 px-4">
+                class="{{ random_color }} w-full h-64 flex flex-col justify-between rounded-lg border border-gray-400 mb-6 py-5 px-4">
                 <div>
-                    <h4 class="text-gray-800 dark:text-gray-100 font-bold mb-3"><a
+                    <h4 class="text-gray-800  font-bold mb-3"><a
                             href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a>
                     </h4>
                     <!--<p class="text-gray-800 dark:text-gray-100 text-sm">{{ post.text|linebreaksbr }}
                 </p>-->
-                    <p class="text-gray-800 dark:text-gray-100 text-sm">{{ post.text|truncatechars:100 }}
+                    <p class="text-gray-800  text-sm">{{ post.text|truncatechars:100 }}
                     </p>
                 </div>
                 <div>
-                    <div class="flex items-center justify-between text-gray-800 dark:text-gray-100">
+                    <div class="flex items-center justify-between text-gray-800">
                         <p class="text-sm">{{ post.published_date }}
                         </p>
                         <button aria-label="edit note" role="button"
                             onclick="location.href=`{% url 'post_detail' pk=post.pk %}`;"
-                            class="w-8 h-8 rounded-full bg-gray-800 dark:bg-gray-100 dark:text-gray-800 text-white flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black"><svg
+                            class="w-8 h-8 rounded-full bg-gray-800 text-white flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
                                 stroke-linejoin="round" class="icon icon-tabler icon-tabler-pencil">
@@ -41,9 +44,11 @@
             </div>
         </div>
 
-
+        {% endwith %}
         {% endfor %}
     </div>
 </div>
 {%  endwith %}
+{% endwith %}
+{% endwith %}
 {% endblock %}
