--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,15 +4,15 @@
 
     <div class="rounded flex items-center justify-center">
         <div
-            class="w-100 h-full flex flex-col justify-between dark:bg-gray-800 bg-white dark:border-gray-700 rounded-lg border border-gray-400 mb-6 py-5 px-4">
+            class="w-100 h-full flex flex-col justify-between bg-white rounded-lg border border-gray-400 mb-6 py-5 px-4">
             <div>
-                <h4 class="text-gray-800 dark:text-gray-100 font-bold mb-3">{{ post.title }}
+                <h4 class="text-gray-800  font-bold mb-3">{{ post.title }}
                 </h4>
-                <p class="text-gray-800 dark:text-gray-100 text-sm">{{ post.text|linebreaksbr }}
+                <p class="text-gray-800 text-sm">{{ post.text|linebreaksbr }}
                 </p>
             </div>
             <div>
-                <div class="flex items-center justify-between text-gray-800 dark:text-gray-100">
+                <div class="flex items-center justify-between text-gray-800">
                     {% if post.published_date %}
                     <p class="text-sm">{{ post.published_date }}</p>
                     {% endif %}
@@ -20,7 +20,7 @@
                     {% if user.is_authenticated %}
                     <button aria-label="edit note" role="button"
                         onclick="location.href=`{% url 'post_edit' pk=post.pk %}`;"
-                        class="w-8 h-8 rounded-full bg-gray-800 dark:bg-gray-100 dark:text-gray-800 text-white flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black">
+                        class="w-8 h-8 rounded-full bg-gray-800 text-white flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-black">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round"
                             stroke-linejoin="round" class="icon icon-tabler icon-tabler-pencil">
