--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -5,7 +5,7 @@
 
 <div class="rounded flex items-center justify-center">
     <div
-        class="w-150 h-full flex flex-col justify-between dark:bg-gray-800 bg-white dark:border-gray-700 rounded-lg border border-gray-400 mb-6 py-5 px-4">
+        class="w-150 h-full flex flex-col justify-between bg-white rounded-lg border border-gray-400 mb-6 py-5 px-4">
         <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">Edit Post</h2>
         <div>
 
@@ -15,7 +15,7 @@
 
                 {{ form.as_p }}
 
-                <div class="flex items-center justify-between text-gray-800 dark:text-gray-100">
+                <div class="flex items-center justify-between text-gray-800">
 
                     <div class="flex justify-betyyween">
                         <button type="submit"
